--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.data.neo4j.uri= bolt://127.0.0.1:7687
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=1234qwer
 
+#test
 #spring.http.encoding.force=true
 #spring.http.encoding.charset=utf-8
 #spring.http.encoding.enabled=true
