--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+server.port=8080
+
 spring.data.neo4j.uri= bolt://127.0.0.1:7687
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=1234qwer
+
+# 开启日志
+#debug=true
 
 #test
 #spring.http.encoding.force=true
